Fix findings from review and fix unit handling for Number, Number:Price, Number:EnergyPrice
Signed-off-by: Marcel Goerentz <57457529+marcelGoerentz@users.noreply.github.com>