@@ -20,8 +20,9 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
-import java.util.Currency;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 
 import javax.measure.Unit;
@@ -32,9 +33,9 @@ import org.eclipse.jetty.client.HttpClient;
 import org.eclipse.jetty.client.api.ContentResponse;
 import org.eclipse.jetty.http.HttpHeader;
 import org.eclipse.jetty.http.HttpMethod;
-import org.openhab.core.i18n.LocaleProvider;
 import org.openhab.core.library.CoreItemFactory;
 import org.openhab.core.library.types.DateTimeType;
+import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.OnOffType;
 import org.openhab.core.library.types.QuantityType;
 import org.openhab.core.library.types.StringType;
@@ -70,17 +71,14 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
 
     private final Logger logger = LoggerFactory.getLogger(EvccBaseThingHandler.class);
     private final ChannelTypeRegistry channelTypeRegistry;
-    private final LocaleProvider locale;
     protected @Nullable EvccBridgeHandler bridgeHandler;
     protected boolean isInitialized = false;
     protected String endpoint = "";
     protected String smartCostType = "";
-    private String currencyCode = "";
 
-    public EvccBaseThingHandler(Thing thing, ChannelTypeRegistry channelTypeRegistry, LocaleProvider locale) {
+    public EvccBaseThingHandler(Thing thing, ChannelTypeRegistry channelTypeRegistry) {
         super(thing);
         this.channelTypeRegistry = channelTypeRegistry;
-        this.locale = locale;
     }
 
     protected void commonInitialize(JsonObject state) {
@@ -105,11 +103,9 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
         updateThing(builder.build());
         updateStatus(ThingStatus.ONLINE);
         isInitialized = true;
-        if (null != bridgeHandler) {
-            bridgeHandler.register(this);
-        } else {
-            logger.error("No bridgeHandler present when initializing the thing");
-        }
+        Optional.ofNullable(bridgeHandler).ifPresentOrElse(handler -> {
+            handler.register(this);
+        }, () -> logger.error("No bridgeHandler present when initializing the thing"));
     }
 
     @Override
@@ -124,9 +120,7 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
 
     @Override
     public void dispose() {
-        if (bridgeHandler != null) {
-            bridgeHandler.unregister(this);
-        }
+        Optional.ofNullable(bridgeHandler).ifPresent(handler -> handler.unregister(this));
         isInitialized = false;
     }
 
@@ -134,8 +128,8 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
     public void handleCommand(ChannelUID channelUID, Command command) {
         if (command instanceof RefreshType) {
             String key = Utils.getKeyFromChannelUID(channelUID);
-            if (bridgeHandler != null) {
-                JsonObject state = getStatefromCachedState(bridgeHandler.getCachedEvccState());
+            Optional.ofNullable(bridgeHandler).ifPresent(handler -> {
+                JsonObject state = getStateFromCachedState(handler.getCachedEvccState());
                 if (!state.isEmpty()) {
                     JsonElement value = state.get(key);
                     ItemTypeUnit typeUnit = getItemType(new ChannelTypeUID(BINDING_ID, channelUID.getId()));
@@ -143,7 +137,7 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
                         setItemValue(typeUnit, channelUID, value);
                     }
                 }
-            }
+            });
         }
     }
 
@@ -155,24 +149,21 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
         if (!"Unknown".equals(itemType)) {
             Channel channel = ChannelBuilder.create(new ChannelUID(getThing().getUID(), thingKey))
                     .withType(channelTypeUID).withAcceptedItemType(itemType).build();
-            if (!getThing().getChannels().stream().anyMatch(c -> c.getUID().equals(channel.getUID()))) {
+            if (getThing().getChannels().stream().noneMatch(c -> c.getUID().equals(channel.getUID()))) {
                 builder.withChannel(channel);
             }
         } else {
-            String valString = "Null";
-            if (null != value) {
-                valString = value.toString();
-            }
+            String valString = Objects.requireNonNullElse(value.toString(), "Null");
             logUnknownChannelXml(thingKey, "Hint for type: " + valString);
         }
     }
 
-    protected ItemTypeUnit getItemType(ChannelTypeUID channelTypeUID) {
+    private ItemTypeUnit getItemType(ChannelTypeUID channelTypeUID) {
         ChannelType channelType = channelTypeRegistry.getChannelType(channelTypeUID);
         if (null != channelType) {
             String itemType = channelType.getItemType();
             if (null != itemType) {
-                Unit<?> unit = Utils.getUnitfromChannelType(itemType);
+                Unit<?> unit = Utils.getUnitFromChannelType(itemType);
                 return new ItemTypeUnit(channelType, unit);
             }
         }
@@ -180,21 +171,23 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
     }
 
     private void setItemValue(ItemTypeUnit itemTypeUnit, ChannelUID channelUID, JsonElement value) {
-        if (value.isJsonNull() || "".equals(itemTypeUnit.itemType)) {
+        if (value.isJsonNull() || itemTypeUnit.itemType.isEmpty()) {
             return;
         }
         switch (itemTypeUnit.itemType) {
             case CoreItemFactory.NUMBER:
+            case NUMBER_CURRENCY:
+            case NUMBER_ENERGY_PRICE:
+                updateState(channelUID, new DecimalType(value.getAsDouble()));
+                break;
             case NUMBER_DIMENSIONLESS:
             case NUMBER_ELECTRIC_CURRENT:
             case NUMBER_EMISSION_INTENSITY:
             case NUMBER_ENERGY:
             case NUMBER_LENGTH:
             case NUMBER_POWER:
-            case NUMBER_CURRENCY:
-            case NUMBER_ENERGY_PRICE:
                 Double finalValue = "%".equals(itemTypeUnit.unitHint) ? value.getAsDouble() / 100 : value.getAsDouble();
-                if (channelUID.getId().contains("capacity")) {
+                if (channelUID.getId().contains("capacity") || "km".equals(itemTypeUnit.unitHint)) {
                     updateState(channelUID, new QuantityType<>(finalValue, itemTypeUnit.unit.multiply(1000)));
                 } else if ("Wh".equals(itemTypeUnit.unitHint)) {
                     updateState(channelUID, new QuantityType<>(finalValue, itemTypeUnit.unit.divide(1000)));
@@ -228,21 +221,13 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
                 key += "Price";
             }
         }
-        return (props.get("type") + "-" + Utils.sanatizeChannelID(key));
+        return (props.get("type") + "-" + Utils.sanitizeChannelID(key));
     }
 
     @Override
     public void updateFromEvccState(JsonObject state) {
         if (!isInitialized) {
             return;
-        }
-        // Check if currency have bebn changed by the user
-        String currencyCode = Currency.getInstance(locale.getLocale()).getCurrencyCode();
-        if (!this.currencyCode.equals(currencyCode)) {
-            this.currencyCode = currencyCode;
-            Unit<?> unit = QuantityType.valueOf(0 + currencyCode).getUnit();
-            Utils.addUnitToUnitMap(NUMBER_CURRENCY, unit);
-            Utils.addUnitToUnitMap(NUMBER_ENERGY_PRICE, unit.divide(Units.KILOWATT_HOUR));
         }
 
         for (Map.Entry<@Nullable String, @Nullable JsonElement> entry : state.entrySet()) {
@@ -266,8 +251,8 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
     }
 
     protected void sendCommand(String url) {
-        if (bridgeHandler != null) {
-            HttpClient httpClient = bridgeHandler.getHttpClient();
+        Optional.ofNullable(bridgeHandler).ifPresent(handler -> {
+            HttpClient httpClient = handler.getHttpClient();
             try {
                 ContentResponse response = httpClient.newRequest(url).timeout(5, TimeUnit.SECONDS)
                         .method(HttpMethod.POST).header(HttpHeader.ACCEPT, "application/json").send();
@@ -279,7 +264,7 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
             } catch (Exception e) {
                 logger.warn("evcc bridge couldn't call the API", e);
             }
-        }
+        });
     }
 
     private ChannelUID channelUID(String id) {
@@ -314,12 +299,15 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
     }
 
     protected void logUnknownChannelXml(String key, String itemType) {
-        String xmlSnippet = String.format("<channel-type id=\"%s\">\n" + "    <item-type unitHint=\"\">%s</item-type>\n"
-                + "    <label>%s</label>\n" + "    <description>Autogenerated placeholder</description>\n"
-                + "    <state readOnly=\"true\"></state>\n" + "    <autoUpdatePolicy>veto</autoUpdatePolicy>\n"
-                + "</channel-type>\n", key, itemType, Utils.capitalizeWords(key));
-        logger.trace("Unbekannter Channel erkannt eventuell fehlt die Definition im {}.xml:\n{}",
-                getThing().getProperties().get("type"), xmlSnippet);
+        String xmlSnippet = String.format("""
+                <channel-type id="%s">
+                    <item-type unitHint="">%s</item-type>
+                    <label>%s</label>
+                    <description>Autogenerated placeholder</description>
+                    <state readOnly="true"></state>
+                    <autoUpdatePolicy>veto</autoUpdatePolicy>
+                </channel-type>
+                """, key, itemType, Utils.capitalizeWords(key));
 
         Path filePath = Paths.get(System.getProperty("user.dir"), "evcc", "unknown-channels.xml");
 
@@ -340,16 +328,14 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
             }
 
             // Append the snippet if it's not already present
-            Files.write(filePath, xmlSnippet.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE,
-                    StandardOpenOption.APPEND);
+            Files.writeString(filePath, xmlSnippet, StandardOpenOption.CREATE, StandardOpenOption.APPEND);
             logger.debug("Unknown channel definition written to file: {}", filePath.toAbsolutePath());
-
         } catch (IOException e) {
             logger.error("Failed to write unknown channel definition to file", e);
         }
     }
 
-    private class ItemTypeUnit {
+    private static class ItemTypeUnit {
         private final Unit<?> unit;
         private final String unitHint;
         private final String itemType;
@@ -357,18 +343,14 @@ public abstract class EvccBaseThingHandler extends BaseThingHandler implements E
         public ItemTypeUnit(@Nullable ChannelType type, @Nullable Unit<?> unit) {
             if (null == type) {
                 unitHint = "";
-                itemType = "Unkown";
+                itemType = "Unknown";
             } else {
                 String tmp = type.getUnitHint();
                 unitHint = null != tmp ? tmp : "";
                 tmp = type.getItemType();
                 itemType = null != tmp ? tmp : "Unknown";
             }
-            if (null == unit) {
-                this.unit = Units.ONE;
-            } else {
-                this.unit = unit;
-            }
+            this.unit = Objects.requireNonNullElse(unit, Units.ONE);
         }
     }
 }
